# rs-google-photos-sync

./: .gitignore  Cargo.toml  README.md  config.json
service/: install_service.rs  show_msg.rs  uninstall_service.rs
src/: app_storage.rs  config.rs  downloader.rs  error.rs  google_api.rs  google_photos.rs  install_service.rs  main.rs  my_db.rs  scheduling.rs  service.rs  util.rs
