[package]
name = "rs-google-photos-sync"
version = "0.1.0"
authors = ["Edin Mujagic <edinmujagic2 at gmail com>"]
edition = "2018"

[dependencies]
opener = "0.4.0"
nickel = "0.11.0"
reqwest = "0.9.20"
serde = "1.0.99"
serde_json = "1.0.40"
chrono = { version = "0.4", features = ["serde"] }
commander = "0.1"
scoped_threadpool = "0.1.9"
job_scheduler = "1.1.0"
filetime = "0.2.8"
cron = "0.6.0"
flexi_logger = { version = "0.14.8", default_features = false }
log = "0.4"

[dev-dependencies]
spectral = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.2.0"
winapi = "0.3.8"

[[bin]]
name = "install_service"
path = "service/install_service.rs"

[[bin]]
name = "uninstall_service"
path = "service/uninstall_service.rs"
